--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<a [routerLink]="['/login']" class="mx-2" routerLinkActive="active" >Login</a>
-<a [routerLink]="['/distance']" class="mx-2" routerLinkActive="active" >Distance</a>
-<br>
-<hr>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
