--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="container">
+  <div class="text-center">
+    <h1>Login</h1>
+  </div>
+  <h1>Welcome Sunil Chhatbar!</h1>
+  <a [routerLink]="['/home']" class="mx-1" routerLinkActive="active">Home</a>
+</div>
