A) Updated basic route button and title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div>
+  <header class="text-center bg-dark text-white">
+    <h1>Distance Web</h1>
+    <button routerLink="/login">Login</button>
+    <button routerLink="/home">Home</button>
+    <button routerLink="/users">Manage Users</button>
+  </header>
+</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
