--- a/src/app/components/distance/distance.component.html
+++ b/src/app/components/distance/distance.component.html
@@ -1,4 +1,7 @@
 <h1>{{AddOrUpdateUserButtonName}} User Details</h1>
+<div>
+  <small class="info">Note: No validations and user friendly common messages applied for now</small>
+</div>
 <br>
 <div class="row">
     <div class="col">
@@ -41,7 +44,7 @@
     </div>
 </div>
 <div>
-  <div>
+  <div class="text-center">
     <button class="btn btn-primary" (click)="AddOrUpdateUser()">{{AddOrUpdateUserButtonName}}</button>
   </div>
 </div>
