--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div>
+  <div class="text-center">
     <h1>Home</h1>
   </div>
   <a [routerLink]="['/users']" class="mx-1" routerLinkActive="active">Go Users Listing</a>
