A) Updated basic looks

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,5 +2,6 @@
   <div class="text-center">
     <h1>Home</h1>
   </div>
+  <h5>Welcome to Home Mr.Sunil Chhatbar!</h5>
   <a [routerLink]="['/users']" class="mx-1" routerLinkActive="active">Go Users Listing</a>
 </div>
