--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,6 +2,7 @@
   <div class="text-center">
     <h1>Login</h1>
   </div>
-  <h5>Welcome Sunil Chhatbar!</h5>
+  <h5>Welcome Please Sign In</h5>
+  <div>Coming soon...</div>
   <a [routerLink]="['/home']" class="mx-1" routerLinkActive="active">Home</a>
 </div>
