--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
 <div>
   <header class="text-center bg-dark text-white">
-    <h1>Distance Web</h1>
-    <button routerLink="/login">Login</button>
-    <button routerLink="/home">Home</button>
-    <button routerLink="/users">Manage Users</button>
+    <div class="row">
+      <div class="col-sm-3 py-1">
+        <h1>Distance Web</h1>
+      </div>
+      <div class="col-sm-3 py-3">
+        <button routerLink="/login">Login</button>
+        <button routerLink="/home">Home</button>
+        <button routerLink="/users">Manage Users</button>
+      </div>
+    </div>
   </header>
 </div>
 <div class="container">
