--- a/src/app/components/distance/distance.component.html
+++ b/src/app/components/distance/distance.component.html
@@ -1,6 +1,6 @@
 <h1>{{AddOrUpdateUserButtonName}} User Details</h1>
 <div>
-  <small class="info">Note: No validations and user friendly common messages applied for now</small>
+  <small class="info">Note: No validations and user friendly messages applied for now</small>
 </div>
 <br>
 <div class="row">
