--- a/src/app/components/user-listing/user-listing.component.html
+++ b/src/app/components/user-listing/user-listing.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <h1>Manage Users</h1>
+  <h1>Manage Users (ALL)</h1>
   <div>
-    <small class="info">Note: No validations and user friendly common messages applied for now</small>
+    <small class="info">Note: No user permissions,form validations and user friendly common messages applied for now</small>
   </div>
   <div class="text-right">
     <button [routerLink]="['/distance',0]" class="btn btn-primary">Create User</button>
@@ -29,6 +29,7 @@
       </tr>
     </tbody>
   </table>
+  <div class="text-center">Note: Pagination Not applied for now</div>
 </div>
 
 
