A) loader componenet created B)isLoading state management done using common service and ngDoCheck C) Loader service in common service created to start and stop loader

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,9 @@
     </div>
   </header>
 </div>
+<div *ngIf="isLoading" class="text-center">
+  <app-loader></app-loader>
+</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
